<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.comphenix.packetwrapper</groupId>
    <artifactId>PacketWrapper</artifactId>
    <version>1.19.4-2.1.0</version>

    <name>PacketWrapper</name>

    <inceptionYear>2012</inceptionYear>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.9.2</junit.version>
        <mockito.version>4.11.0</mockito.version>
        <minecraft.version>1.19.4-R0.1-SNAPSHOT</minecraft.version>
    </properties>

    <repositories>
        <!-- PATCH-BEGIN -->
        <!-- <repository>
            <id>lukasalt-repo</id>
            <url>https://repo.lukasa.lt/repository/maven-public/</url>
        </repository> -->
        <!-- PATCH-END -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/content/groups/public/</url>
        </repository>
    </repositories>

    <!-- PATCH-BEGIN -->
    <!-- <distributionManagement>
        <repository>
            <id>lukasalt-repo</id>
            <url>https://repo.lukasa.lt/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>lukasalt-repo</id>
            <url>https://repo.lukasa.lt/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement> -->
    <!-- PATCH-END -->

    <profiles>
        <profile>
            <id>spigot-mapped</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <dependencies>
                <dependency>
                    <groupId>org.spigotmc</groupId>
                    <artifactId>spigot</artifactId>
                    <version>${minecraft.version}</version>
                    <scope>provided</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>mojang-mapped</id>
            <dependencies>
                <dependency>
                    <groupId>org.spigotmc</groupId>
                    <artifactId>spigot</artifactId>
                    <version>${minecraft.version}</version>
                    <classifier>remapped-mojang</classifier>
                    <scope>provided</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>${minecraft.version}</version>
        </dependency>
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <!-- PATCH-BEGIN -->
            <!-- <version>5.1.0-SNAPSHOT</version> -->
            <version>5.1.0</version>
            <!-- PATCH-END -->
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.spigotmc</groupId>
                    <artifactId>spigot</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Testing dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>

        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources</directory>
                <includes>
                    <include>*</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>

            <!-- PATCH-BEGIN -->
            <!-- <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <encoding>ISO-8859-1</encoding>
                    <doctitle>PacketWrapper JavaDocs</doctitle>
                    <windowtitle>PacketWrapper JavaDocs</windowtitle>
                    <bottom>Copyright &#169; {inceptionYear}&#x2013;{currentYear}
                        Comphenix and dmulloy2. Licensed under the GNU GPL v2.
                    </bottom>
                </configuration>
                <executions>
                    <execution>
                        <phase>install</phase>
                        <goals>
                            <goal>aggregate</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin> -->
            <!-- PATCH-END -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
                <dependencies>
                    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>${junit.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <trimStackTrace>false</trimStackTrace>
                    <useFile>false</useFile>
                    <systemProperties>
                        <property>
                            <name>projectVersion</name>
                            <value>${project.version}</value>
                        </property>
                        <property>
                            <name>minecraftVersion</name>
                            <value>${minecraft.version}</value>
                        </property>
                    </systemProperties>
                    <!-- We need this as we use reflection in tests to ensure equality -->
                    <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
